# ocamlclean

./: .gitignore  INSTALL  Makefile  README  configure  dune-project  ocamlclean.opam
.github/workflows/: ci.yml
etc/: Makefile.conf  config.ml
man/: dune
src/: Makefile  cleanbra.ml  cleanenvs.ml  code.ml  data.ml  dump.ml  dune  globalise.ml  index.ml  instr.ml  linker.ml  loader.ml  main.ml  prim.ml  rmnop.ml  step1.ml  step2.ml  step3.ml
