opam-version: "2.0"
authors: ["Benoît Vaugon"]
homepage: "http://www.algo-prog.info/ocapic/web/index.php?id=OCAPIC:OCamlClean"
bug-reports: "https://github.com/bvaugon/ocamlclean/issues"
dev-repo: "git+https://github.com/bvaugon/ocamlclean.git"
maintainer: "benoit.vaugon@gmail.com"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "ocaml" {>= "4.09" & < "4.10.0"}
  "dune"
]
synopsis: "Reduce size of OCaml bytecode files by dead-code removing"
